<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menuTitle">재미로 보는 주역점</string>
    <string name="hello">Hello World, FortuneTellMain!</string>
    <string name="app_name">재미로보는 주역점</string>
    <string name="menuStr1">간단 주역점</string>
    <string name="menuStr11">간단 주역점</string>
    <string name="menuStr2">상세 주역점</string>
    <string name="menuStr3">오늘의 운세</string>
    <string name="menuStr4">이력조회</string>
    <string name="menuStr5">서비스안내</string>
    <string name="iching_list_text1">IChing History List</string>
    

    <string name="menuStr6">티궁합</string>
    <!-- string name="harmonyUrl">http://192.168.123.101:8080/harmony/HarmonyHttpJson.jsp</string-->
    <string name="harmonyUrl">http://www.taoist.co.kr/android/ChemistryHandler.php</string>
    <!-- string name="harmonyUrl">http://172.30.5.61:9998/android/ChemistryHandler.jsp</string -->
    
   	<string name="harmonyCharSet">UTF-8</string>
   	<string name="harmonyBufSize">1024</string>
   	<string name="harmonyTimeOut">1000</string>
   	<string name="harmonyMethodType">POST</string>
   	<string name="harmonyMaxTryCnt">3</string>
   	<string name="harmonyTryTimeOut">1000</string>

    <string name="app_list_name">주역이력리스트</string>
    <string name="app_edit_name">주역이력수정</string>
    <string name="app_view_name">주역이력조회</string>
    <string name="iching_hist_list_title">이력제목</string>
    <string name="iching_hist_list_ask">문의사항</string>
    <string name="iching_hist_list_answer">문의결과</string>
    <string name="iching_hist_list_result">최종결과</string>
    <string name="iching_hist_list_ask_date">문의일자</string>
    <string name="iching_hist_list_accuracy">적중도</string>
    <string name="no_hist">NO DATA</string>
    <string name="iching_hist_list_new">신규</string>
    <string name="iching_hist_list_update">수정</string>
    <string name="iching_hist_list_delete">삭제</string> 
    <string name="iching_hist_list_confirm">확인</string>
    <string name="iching_hist_list_cancle">취소</string>
    
    <string name="help_data">\r\n
◐재미로보는 운세 주역점이란?\r\n
운세 주역점은 주역의 점법을 이용하여,
궁금한 내용을 간단하게 점쳐볼수 있도록 구성한 프로그램 입니다.
이프로그램은 주역을 재미있게 공부할 목적으로 개발한 측면이 강합니다.
점친 내용을 너무 심각하게 받아들이지는 않아 주셨으면 감사하겠습니다. 
\r\n\r\n

◐간단 주역점\r\n
음,양의 육효를 이용하여 간단하게 점을 치는 화면입니다. 
화면에 회전하는 팔괘판이 나오고 판을 한번씩 누를때마도 효가 하나씩 생성됩니다.
육효가 완성되면 이 괘를 바탕으로 점괘를 뽑아 볼수 있습니다.
\r\n\r\n

◐오늘의 운세\r\n
자신의 띠에 해당하는 동물모양(12지신)을 하나 선택하시면  오늘의 운세를 조회하여 볼수 있습니다.\r\n\r\n

◐이력조회\r\n
점친 결과를 저장,조회,수정 관리하는 화면입니다. 
인생사의 주요 사항을 점쳐보고, 점친결과를 저장해 둘수 있습니다.
나중에 점친결과와 실제 벌어진 일을 비교해 보실수 있습니다. \r\n\r\n

◐개발 : TAOIST\r\n
안드로이드 개발자 모임\r\n
컴도사(hanshin8086@gmail.com)\r\n
주도사(marbleian@gmail.com)\r\n
뚱도사(digitaldna4@gmail.com)\r\n
현풍도사(darktaoist@gmail.com)\r\n\r\n

◐디자인 : 태극낭자\r\n
태극낭자(pineleaf@gmail.com)\r\n\r\n

◐참고문헌\r\n
주역(혜원출판사,1991)\r\n

    </string>   
		<string name="ich64">건위천(乾爲天)</string>
		<string name="ich32">택천쾌(澤天夬)</string>
		<string name="ich48">화천대유(火天大有)</string>
		<string name="ich16">뇌천대장(雷天大壯)</string>
		<string name="ich56">풍천소축(風天小畜)</string>
		<string name="ich24">수천수(水天需)</string>
		<string name="ich40">산천대축(山天大畜)</string>
		<string name="ich8">지천태(地天泰)</string>
		<string name="ich60">천택리(天澤履)</string>
		<string name="ich28">태위택(兌爲澤)</string>
		<string name="ich44">화택규(火澤睽)</string>
		<string name="ich12">뇌택귀매(雷澤歸妹)</string>
		<string name="ich52">풍택중부(風澤中孚)</string>
		<string name="ich20">수택절(水澤節)</string>
		<string name="ich36">산택손(山澤損)</string>
		<string name="ich4">지택림(地澤臨)</string>
		<string name="ich62">천화동인(天火同人)</string>
		<string name="ich30">택화혁(澤火革)</string>
		<string name="ich46">이위화(離爲火)</string>
		<string name="ich14">뇌화풍(雷火豊)</string>
		<string name="ich54">풍화가인(風火家人)</string>
		<string name="ich22">수화기제(水火旣濟)</string>
		<string name="ich38">산화비(山火賁)</string>
		<string name="ich6">지화명이(地火明夷)</string>
		<string name="ich58">천뢰무망(天雷无妄)</string>
		<string name="ich26">택뢰수(澤雷隨)</string>
		<string name="ich42">화뢰서합(火雷噬嗑)</string>
		<string name="ich10">진위뢰(震爲雷)</string>
		<string name="ich50">풍뢰익(風雷益)</string>
		<string name="ich18">수뢰둔(水雷屯)</string>
		<string name="ich34">산뢰이(山雷頤)</string>
		<string name="ich2">지뢰복(地雷復)</string>
		<string name="ich63">천풍구(天風姤)</string>
		<string name="ich31">택풍대과(澤風大過)</string>
		<string name="ich47">화풍정(火風鼎)</string>
		<string name="ich15">뇌풍항(雷風恒)</string>
		<string name="ich55">손위풍(巽爲風)</string>
		<string name="ich23">수풍정(水風井)</string>
		<string name="ich39">산풍고(山風蠱)</string>
		<string name="ich7">지풍승(地風升)</string>
		<string name="ich59">천수송(天水訟)</string>
		<string name="ich27">택수곤(澤水困)</string>
		<string name="ich43">화수미제(火水未濟)</string>
		<string name="ich11">뇌수해(雷水解)</string>
		<string name="ich51">풍수환(風水渙)</string>
		<string name="ich19">감위수(坎爲水)</string>
		<string name="ich35">산수몽(山水蒙)</string>
		<string name="ich3">지수사(地水師)</string>
		<string name="ich61">천산돈(天山遯)</string>
		<string name="ich29">택산함(澤山咸)</string>
		<string name="ich45">화산여(火山旅)</string>
		<string name="ich13">뇌산소과(雷山小過)</string>
		<string name="ich53">풍산점(風山漸)</string>
		<string name="ich21">수산건(水山蹇)</string>
		<string name="ich37">간위산(艮爲山)</string>
		<string name="ich5">지산겸(地山謙)</string>
		<string name="ich57">천지비(天地否)</string>
		<string name="ich25">택지췌(澤地萃)</string>
		<string name="ich41">화지진(火地晉)</string>
		<string name="ich9">뇌지예(雷地豫)</string>
		<string name="ich49">풍지관(風地觀)</string>
		<string name="ich17">수지비(水地比)</string>
		<string name="ich33">산지박(山地剝)</string>
		<string name="ich1">곤위지(坤爲地)</string>

</resources>
