<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:orientation="vertical" android:layout_width="fill_parent"
 android:layout_height="fill_parent" android:background="@drawable/title_hist_view">
 
 <include layout="@layout/upper_layer" /> 

 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/middle"
 android:orientation="vertical" android:layout_width="fill_parent"
 android:layout_height="0dip" 
 android:layout_weight="8" 
  >	 
 
<ScrollView android:id="@+id/chatview" android:orientation="vertical"
 android:layout_weight="8" 
	android:layout_width="fill_parent" android:layout_height="wrap_content">
	
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/middle"
 android:orientation="vertical" android:layout_width="fill_parent"
 android:layout_height="wrap_content" 
 android:layout_weight="8" 
  >	
	<LinearLayout android:orientation="vertical"
				  android:layout_width="fill_parent"
				  android:layout_marginTop="1px"
				  android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  style="@style/simple_result_style"
				  android:text="@string/iching_hist_list_title" />
				  
		<TextView android:id="@+id/iching_hist_view_title"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  style="@style/simple_result_style"
				  android:layout_marginLeft="30px"
				  android:layout_weight="1"/>
	</LinearLayout>

	<LinearLayout android:orientation="vertical"
				  android:layout_width="fill_parent"
				  android:layout_marginTop="5px"
				  android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  style="@style/simple_result_style"
				  android:text="@string/iching_hist_list_ask" />
				  
		<TextView android:id="@+id/iching_hist_view_ask"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  style="@style/simple_result_style"
				  android:layout_marginLeft="30px"
				  android:layout_weight="1"/>
	</LinearLayout>

	<LinearLayout android:orientation="vertical"
				  android:layout_width="fill_parent"
				  android:layout_marginTop="5px"
				  android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  style="@style/simple_result_style"
				  android:text="@string/iching_hist_list_answer" />
				  
		<WebView android:id="@+id/iching_hist_view_answer"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  style="@style/simple_result_style"
				  android:lines="10"
				  android:layout_weight="1"/> 
	</LinearLayout>

	<LinearLayout android:orientation="vertical"
				  android:layout_width="fill_parent"
				  android:layout_marginTop="5px"
				  android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  style="@style/simple_result_style"
				  android:text="@string/iching_hist_list_result" />
				  
		<TextView android:id="@+id/iching_hist_view_result"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:lines="10"
				  style="@style/simple_result_style"
				  android:layout_marginLeft="30px"
				  android:layout_weight="6"/>
	</LinearLayout>

	<LinearLayout android:orientation="vertical"
				  android:layout_width="fill_parent"
				  android:layout_marginTop="5px"
				  android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  style="@style/simple_result_style"
				  android:text="@string/iching_hist_list_ask_date" />
		<TextView android:id="@+id/iching_hist_view_ask_date"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  style="@style/simple_result_style"
				  android:layout_marginLeft="30px"
				  />
	</LinearLayout>	
	<LinearLayout android:orientation="vertical" 
				  android:layout_width="fill_parent"
				  android:layout_marginTop="5px"
				  android:layout_height="wrap_content">				  
		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  style="@style/simple_result_style"
				  android:text="@string/iching_hist_list_accuracy" />
				  
	    <RatingBar android:id="@+id/iching_hist_view_accuracy"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:numStars="5"
		 	android:layout_marginLeft="30px"
			android:rating="3" />
	</LinearLayout>			
</LinearLayout>		
</ScrollView>
</LinearLayout>	

<include layout="@layout/bellow_buttons" /> 
</LinearLayout>  